store button alignment fix

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
   position: absolute;
   width: 150px;
   z-index: 10;
-  bottom: 8%;
+  bottom: 30%;
   left: 30%;
 }
 
